# Static-TARL-Env

./: .gitignore  README.md  pyproject.toml
src/: training.py
src/data/configs/: params.yaml
src/data/scenarios/test/: test_demand.json  test_network.json
src/rl_models/: q_learning_agent.py
src/simulation/: __init__.py  env.py  gnn_encoder.py  init.py  network.ipynb  network.py  paths.py  pyg_network.py
src/static_tarl_env/: __init__.py
src/static_tarl_env/data/configs/: params.yaml
tests/: conftest.py  test_env.py  test_example.py  test_gnn_encoder.py  test_network.py  test_paths.py
